<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Podcaster Launcher</string>
    <string name="content_description_cover_image">Chanel logo</string>
    <string name="stateui_default_progress_dialog_title" tools:ignore="UnusedResources">Loading podcasts</string>
    <string name="stateui_default_progress_dialog_message" tools:ignore="UnusedResources">Hold tight!</string>
    <string name="no_data_ui_text">No data, please retry…</string>
    <string name="download_description">Saving podcast for offline use</string>
    <string name="title_activity_settings">Settings</string>
    <string name="restore_confirmation_dialog_negative_text">Nope</string>
    <string name="restore_confirmation_dialog_positive_text">Yes</string>
    <string name="restore_confirmation_dialog_content">Your last session was interrupted, do you want to proceed from the last position?</string>
    <string name="restore_confirmation_dialog_title">Session interrupted</string>
    <string name="no_internet_message">You have no internet…</string>
    <string name="network_error_message">Network error</string>
    <string name="parsing_error_message">Parsing error</string>
    <string name="about_content">Podcaster is yet another podcast aggregator just for fun.</string>
    <string name="action_refresh">Sync podcasts</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About podcaster</string>

    <!-- Strings related to Settings -->
    <string name="sync_section_title">Sync Information</string>
    <string name="auto_sync_title">Enable Auto Sync</string>
    <string name="auto_sync_summary">Enable or disable data sync</string>
    <string name="auto_sync_interval_title">Sync interval</string>
    <string name="auto_sync_interval_summary">Define how often sync will be performed</string>
    <string name="custom_section_title">Customisations</string>
    <string name="hide_podcast_images_title">Hide Podcast Images</string>
    <string name="hide_podcast_images_summary">Show or hide podcast images</string>
    <string name="update_interval_6_hours">6 hours</string>
    <string name="update_interval_12_hours">12 hours</string>
    <string name="update_interval_day">day</string>
    <string name="update_interval_week">week</string>

    <!-- No translation needed -->
    <string name="hide_podcast_images_key" translatable="false">show_podcast_images</string>
    <string name="sync_interval_key" translatable="false">sync_interval</string>
    <string name="perform_sync_key" translatable="false">perform_sync</string>
    <string name="default_current_time" translatable="false">00:00:00</string>
    <string name="default_total_time" translatable="false">--:--:--</string>
    <string name="default_sync_interval" translatable="false">12</string>
    <string name="ok_button_text" translatable="false">OK</string>
    <string name="about_title" translatable="false">@string/action_about</string>
</resources>
