<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="sync_category"
        android:title="@string/sync_section_title">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="perform_sync"
            android:summary="@string/auto_sync_summary"
            android:title="@string/auto_sync_title" />

        <ListPreference
            android:defaultValue="1000"
            android:dependency="perform_sync"
            android:entries="@array/updateInterval"
            android:entryValues="@array/updateIntervalValues"
            android:key="sync_interval"
            android:summary="@string/auto_sync_interval_summary"
            android:title="@string/auto_sync_interval_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="custom_category"
        android:title="@string/custom_section_title">

        <CheckBoxPreference
            android:defaultValue="@string/default_is_hide_images"
            android:key="@string/hide_podcast_images_key"
            android:summary="@string/hide_podcast_images_summary"
            android:title="@string/hide_podcast_images_title" />
    </PreferenceCategory>

</PreferenceScreen>